# omicron

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
CMakeModules/: FindOmicron.cmake  FindPSMoveAPI.cmake  OmicronAddTutorial.cmake  findPSMoveAPI.cmake
data/: KinectSpeech.grxml  heartbeat.cfg  localServer.cfg  ocachesrv.cfg  oinputserver-cave2Kinect2.cfg  oinputserver-kinectCAVEsimulator.cfg  oinputserver-netservice.cfg  oinputserver.cfg  sageTouch.cfg  soundTest.cfg
docs/: Doxyfile
examples/localService/: localHeartbeat.cpp
examples/remoteService/: CMakeLists.txt  netHeartbeat.cpp
include/: omicron.h
include/connector/: omicronConnectorClient.h
include/omicron/: AssetCacheManager.h  AssetCacheService.h  ByteArray.h  Color.h  Config.h  DataManager.h  DirectXInputService.h  Event.h  FileDataStream.h  FilesystemDataSource.h  GestureService.h  HeartbeatService.h  HttpRequest.h  IEventListener.h  InputServer.h  LegacyDirectInputService.h  LegacyDirectXInputService.h  LegacyNetService.h  Library.h  Lock.h  MSKinect2Service.h  MSKinectService.h  MocapGestureManager.h  NameGenerator.h  NaturalPointService.h  NetService.h  OpenNIService.h  OpenVRService.h  PQService.h  PSMoveService.h  PointSetId.h  RayPointMapper.h  SagePointerService.h  Service.h  ServiceManager.h  Sound.h  SoundManager.h  StringUtils.h  Tcp.h  ThinkGearService.h  (+13 more)
include/omicron/libconfig/: ArgumentHelper.h  libconfig.hh
include/omicron/math/: AlignedBox.h  EigenWrappers.h  Math.h  Plane.h  PlaneBoundedVolume.h  Ray.h  Sphere.h
include/omicron/vrpn/: vrpn_Analog_Output.h  vrpn_Shared.h  vrpn_Tracker.h
include/omicron/xml/: tinystr.h
omicron/: commit-test.txt
omicron/CMakeModules/: OmicronAddExample.cmake  UseOmicron.cmake.in
omicron/data/: oscTest.cfg  soundTest.cfg
omicron/docs/logo/: OmegaLogo.pptx
omicron/examples/localService/: CMakeLists.txt
omicron/include/: omicron.h
omicron/include/connector/: omicronConnectorClient.h
omicron/include/omicron/: AssetCacheManager.h  AssetCacheService.h  Config.h  DataManager.h  DirectInputService.h  DrawContext.h  FileDataStream.h  FilesystemDataSource.h  GestureService.h  HttpRequest.h  IEventListener.h  MSKinectService.h  MocapGestureManager.h  NaturalPointService.h  NetService.h  OpenNIService.h  OptitrackService.h  Sound.h  SoundManager.h  StringUtils.h  ThinkGearService.h  Timer.h  TouchGestureManager.h  VRPNDevice.h  Wiimote.h  XInputService.h  otypes.h  thinkgear.h  wiimote_common.h
omicron/include/omicron/libconfig/: libconfig.h  libconfig.h++
omicron/include/omicron/math/: Math.h  Plane.h  Ray.h
omicron/include/omicron/xml/: tinyxml.h
omicron/processing/OmicronAPI/javadoc/: allclasses-frame.html
omicron/src/: CMakeLists.txt
omicron/src/apps/connectorClient/: CMakeLists.txt
omicron/src/apps/eventlogger/: eventlogger.cpp
omicron/src/apps/legacy-oinputserver/: legacy-oinputserver.cpp
omicron/src/apps/ocachesrv/: CMakeLists.txt
omicron/src/apps/ocachesync/: CMakeLists.txt
omicron/src/apps/oinputserver/: CMakeLists.txt
omicron/src/apps/sageinputserver/: sageinputserver.cpp
omicron/unity/Assets/: Omicron Example - Kinect.unity  Test Terrain.asset
omicron/unity/ProjectSettings/: TagManager.asset
processing/OmicronAPI/: .classpath  .project
processing/OmicronAPI/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
src/: CMakeLists.txt
src/apps/connectorClient/: CMakeLists.txt  connectorClient.cpp
src/apps/eventlogger/: CMakeLists.txt  eventlogger.cpp
src/apps/legacy-oinputserver/: CMakeLists.txt  legacy-oinputserver.cpp
src/apps/ocachesrv/: CMakeLists.txt  ocachesrv.cpp
src/apps/ocachesync/: CMakeLists.txt  ocachesync.cpp
src/apps/oinputserver/: CMakeLists.txt  oinputserver.cpp
src/apps/oinputserverGUI/: oinputserverGUI.cpp  oinputserverGUI.h  oinputserverGUI.vcxproj
src/apps/sageinputserver/: CMakeLists.txt  sageinputserver.cpp
src/apps/soundtest/: CMakeLists.txt  soundtest.cpp
src/omicron/: CMakeLists.txt
src/omicron/omicron/: AssetCacheManager.cpp  AssetCacheService.cpp  ByteArray.cpp  Color.cpp  Config.cpp  CylindricalRayPointMapper.h  DataManager.cpp  DirectInputService.cpp  DirectXInputService.cpp  FileDataStream.cpp  FilesystemDataSource.cpp  GestureService.cpp  HeartbeatService.cpp  InputServer.cpp  LegacyDirectInputService.cpp  LegacyDirectXInputService.cpp  Library.cpp  Lock.cpp  MSKinect2Service.cpp  MSKinectService.cpp  Math.cpp  NaturalPointService.cpp  NetService.cpp  OpenNIService.cpp  OpenVRService.cpp  OptitrackService.cpp  PQService.cpp  PSMoveService.cpp  RayPointMapper.cpp  RectangularRayPointMapper.h  SagePointerService.cpp  Service.cpp  ServiceManager.cpp  Sound.cpp  SoundManager.cpp  StringUtils.cpp  TabletService.cpp  Tcp.cpp  ThinkGearService.cpp  Thread.cpp  (+11 more)
src/omicron/omicron/libconfig/: ArgumentHelper.cpp  CMakeLists.txt  libconfig.c  scanctx.c  scanner.c  strbuf.c
src/omicron/omicron/mskinect/: KinectAudioStream.cpp
src/omicron/omicron/xml/: tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
unity/Assets/: OmegaLib Example - Kinect.unity  OmegaLib Example - NeuroSky.unity  OmegaLib Example - Stereoscopic.unity  OmegaLib Example - Touch.unity  OmegaLib Example - Vicon.unity  OmegaLib Example - Wiimote.unity  OmegaLib Example - Xbox Controller.unity  Omicron Example - Kinect.unity  Omicron Example - NeuroSky Mindwave.unity  Omicron Example - Touch.unity
unity/Assets/Legacy Examples/: OmegaLib Example - Wiimote.unity  OmegaLib Example - Xbox Controller.unity
unity/Assets/Materials/: BlueMaterial.mat  stereo3DMat.mat
unity/Assets/Prefabs/: HeadTrackedStereo.prefab
unity/Assets/Scripts/: InputServiceScript.cs  NeuroSkyScript.cs  OmegaControllerScript.cs  OmicronConnectorClient.cs  OmicronInputScript.cs  OmicronKinectScript.cs  TouchColorExampleScript.cs  TouchScript.cs
unity/Assets/Shader/: stereo3DViewMethods.shader
unity/ProjectSettings/: ProjectSettings.asset
(+128 files in other folders)
